--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <h1>안녕 깃</h1>
     <p>수정했습니다(new file,modified)</p>
     <p>git diff로 수정 내역 확인</p>
+    <p>수정 3 새파일 만들기 및 삭제 테스트</p>
+    <p>git status --s</p>
+
 </body>
 </html>
