index.html이 css를  참조함 오늘 작업 끝

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>git 수업용 파일</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>안녕 깃</h1>
