index.html 참조 완료 난 퇴근한다

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>git 수업용 파일</title>
+    <script src="index.js"></script>
 </head>
 <body>
     <h1>안녕 깃</h1>
